--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  padding: 8px;
 }
 
 .logo {
@@ -14,12 +19,16 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 4px;
   /* this removes the line under the links */
   text-decoration: none;
 }
