--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  gap: 16px;
+  display: flex;
 }
 
 .icon {
@@ -63,4 +66,21 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.firstrow {
+  display:flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.header {
+  justify-content: space-evenly;
+  padding: 20px;
+  
+}
+
+.icon,
+.close-button {
+  flex-shrink: 0;
 }
