--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +26,53 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.right-links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
+}
+
+.left-links {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.footer,
+.header {
+  display:flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.footer {
+  background-color: grey;
+}
+
+a {
+  text-decoration: none;
+  color: #666;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 16px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+button {
+  padding: 8px 16px;
 }
